--- a/app/src/main/res/layout/content_deliverable_details.xml
+++ b/app/src/main/res/layout/content_deliverable_details.xml
@@ -69,8 +69,7 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Small Text"
         android:id="@+id/descriptionTextView"
-        android:layout_weight="0.76"
-        android:layout_marginBottom="20dp" />
+        android:layout_weight="0.76" />
 
     <TextView
         android:layout_width="match_parent"
@@ -78,7 +77,8 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/deliverable_priority_comments"
         android:id="@+id/priorityCommentsLabelTextView"
-        android:textStyle="bold|italic" />
+        android:textStyle="bold|italic"
+        android:layout_marginTop="20dp" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -92,7 +92,8 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Small Text"
         android:id="@+id/prioritizedByTextView"
-        android:layout_marginBottom="120dp"/>
+        android:layout_marginBottom="120dp"
+        android:visibility="invisible" />
 
 </LinearLayout>
 
