--- a/app/src/main/res/menu/menu_deliverable_details.xml
+++ b/app/src/main/res/menu/menu_deliverable_details.xml
@@ -3,11 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="br.com.ca.blueocean.activity.DeliverablesActivity">
 
+    <!--
     <item android:id="@+id/action_show_messages"
         android:icon="@drawable/ic_action_messages"
         android:title="@string/menu_show_messages"
         android:orderInCategory="100"
         app:showAsAction="always" />
+    -->
 
     <!--
     <item android:id="@+id/action_toggle_join_deliverable"
@@ -19,7 +21,7 @@
         android:icon="@drawable/ic_share"
         android:title="@string/share"
         android:orderInCategory="400"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 
     <!--
     <item android:id="@+id/action_conclude_deliverable"
@@ -29,9 +31,10 @@
     -->
 
     <item android:id="@+id/action_edit_deliverable"
+        android:icon="@drawable/ic_action_edit"
         android:title="@string/menu_edit"
         android:orderInCategory="600"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 
     <item android:id="@+id/action_delete_deliverable"
         android:title="@string/menu_delete"
