--- a/app/src/main/res/menu/menu_deliverables.xml
+++ b/app/src/main/res/menu/menu_deliverables.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="br.com.ca.blueocean.activity.DeliverablesActivity">
 
-
+    <!--
     <item android:id="@+id/action_show_messages"
         android:icon="@drawable/ic_action_messages"
         android:title="@string/menu_show_messages"
         android:orderInCategory="200"
         app:showAsAction="always" />
+    -->
 
     <!--
     <item android:id="@+id/action_invite"
@@ -22,7 +23,7 @@
         android:icon="@drawable/ic_share"
         android:title="@string/share"
         android:orderInCategory="400"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 
     <item android:id="@+id/initiative_report"
         android:icon="@drawable/ic_show_chart"
