--- a/app/src/main/res/menu/menu_initiatives.xml
+++ b/app/src/main/res/menu/menu_initiatives.xml
@@ -11,16 +11,18 @@
         app:showAsAction="always" />
 
     <item android:id="@+id/action_show_all_priorities"
-        android:icon="@drawable/ic_action_add"
+        android:icon="@drawable/ic_action_bookmark"
         android:title="@string/menu_show_all_priorities"
         android:orderInCategory="300"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 
+    <!--
     <item android:id="@+id/action_show_messages"
         android:icon="@drawable/ic_action_messages"
         android:title="@string/menu_show_messages"
         android:orderInCategory="500"
         app:showAsAction="never" />
+    -->
 
     <item android:id="@+id/action_show_info"
         android:title="@string/menu_info"
