--- a/app/src/main/res/layout/content_create_deliverable.xml
+++ b/app/src/main/res/layout/content_create_deliverable.xml
@@ -42,26 +42,28 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.16">
 
-        <ImageView
+        <!-- ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:id="@+id/calendarImageView"
             android:src="@mipmap/ic_today_black_24dp"
             android:layout_weight="0.05"
-            android:onClick="onCalendarImageClick"
+            android:onClick="onCalendarClick"
             android:layout_marginTop="40dp"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true" / -->
 
         <TextView
+            android:id="@+id/deliverableDateTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:onClick="onCalendarClick"
             android:text="@string/entry_deliverable_dueDate"
-            android:id="@+id/deliverableDateTextView"
-            android:layout_alignBottom="@+id/calendarImageView"
-            android:layout_toRightOf="@+id/calendarImageView"
-            android:layout_toEndOf="@+id/calendarImageView"
-            android:layout_marginLeft="10dp" />
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </RelativeLayout>
 
