--- a/app/src/main/res/layout/content_edit_deliverable.xml
+++ b/app/src/main/res/layout/content_edit_deliverable.xml
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.16">
 
-        <ImageView
+        <!-- ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:id="@+id/calendarUpdateImageView"
@@ -56,7 +56,7 @@
             android:layout_weight="0.05"
             android:onClick="onCalendarUpdateImageClick"
             android:layout_marginTop="40dp"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true" / -->
 
         <TextView
             android:layout_width="wrap_content"
@@ -64,9 +64,10 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/entry_deliverable_dueDate"
             android:id="@+id/deliverableDueDateUpdateTextView"
-            android:layout_alignBottom="@+id/calendarImageView"
-            android:layout_toRightOf="@+id/calendarImageView"
-            android:layout_toEndOf="@+id/calendarImageView"
+            android:clickable="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:onClick="onCalendarClick"
             android:layout_marginLeft="10dp" />
 
     </RelativeLayout>
