--- a/app/src/main/res/menu/menu_deliverable_details.xml
+++ b/app/src/main/res/menu/menu_deliverable_details.xml
@@ -36,9 +36,14 @@
         android:orderInCategory="600"
         app:showAsAction="always" />
 
+    <item android:id="@+id/action_finish_deliverable"
+        android:title="@string/menu_finish"
+        android:orderInCategory="700"
+        app:showAsAction="never" />
+
     <item android:id="@+id/action_delete_deliverable"
         android:title="@string/menu_delete"
-        android:orderInCategory="700"
+        android:orderInCategory="800"
         app:showAsAction="never" />
 
 </menu>
